# WayBill

./: .env.exmpl  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  pyproject.toml  template_wb.xlsx
config/: settings.py  urls.py
csv_files_exmpl/: cars_data.csv  drivers_data.csv  events-20250404-152256.csv  locations_data.csv
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html
way_bills_creator/: apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
way_bills_creator/migrations/: 0001_initial.py  0002_event_event_id.py  0003_alter_event_event_id.py  0004_alter_event_event_id.py  0005_location_location_name_alter_location_address_and_more.py  0006_driver_lic_date_driver_lic_num_driver_snils_num_and_more.py  0007_alter_driver_lic_date.py  0008_waybill_event_id.py  0009_alter_waybill_options.py
way_bills_creator/templates/way_bills_creator/: base.html  car_confirm_delete.html  car_detail.html  car_form.html  car_list.html  distance_confirm_delete.html  distance_detail.html  distance_form.html  distance_list.html  driver_confirm_delete.html  driver_detail.html  driver_form.html  driver_list.html  location_confirm_delete.html  location_detail.html  location_form.html  location_list.html  service.html  waybill_confirm_delete.html  waybill_detail.html  waybill_form.html  waybill_list.html
way_bills_creator/templates/way_bills_creator/includes/: inc_main_menu.html
