[tool.poetry]
name = "waybill"
version = "0.1.0"
description = ""
authors = ["Anna Soboleva <asoboleva.avs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
service = "^0.6.0"
pyteamup = "^0.1.4a0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
gunicorn = "^23.0.0"
djangorestframework = "^3.16.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
